add mysql & mongodb

--- a/index.html
+++ b/index.html
@@ -217,6 +217,30 @@
               </div>
             </div>
           </div>
+          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+            <div class="card">
+              <div class="card-body px-4">
+                <div class="row justify-content-center">
+                  <div class="col-md-12 col-lg-6">
+                    <img src="img/skills/mysql-logo.png" alt="logo" class="img-fluid">
+                  </div>
+                </div>
+                <h6 class="card-title mt-4 text-center" style="font-size: 1.4vw;">MySQL</h6>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+            <div class="card">
+              <div class="card-body px-4">
+                <div class="row justify-content-center">
+                  <div class="col-md-12 col-lg-6">
+                    <img src="img/skills/mongodb.png" alt="logo" class="img-fluid">
+                  </div>
+                </div>
+                <h6 class="card-title mt-4 text-center" style="font-size: 1.4vw;">MongoDB</h6>
+              </div>
+            </div>
+          </div>
           
           <!-- <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
