fix responsive card navbar

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </div>
         </div>
         <div class="row justify-content-center mt-0 mt-md-5">
-          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+          <div class="col-4 col-md-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -81,11 +81,11 @@
                     <img src="img/skills/html-icon.png" alt="logo" class="img-fluid">
                   </div>
                 </div>
-                <h6 class="card-title mt-4 text-center" style="font-size: 1.5vw;">HTML</h6>
+                <h6 class="card-title mt-4 text-center">HTML</h6>
               </div>
             </div>
           </div>
-          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+          <div class="col-4 col-md-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -93,11 +93,11 @@
                     <img src="img/skills/css3-icon.png" alt="logo" class="img-fluid">
                   </div>
                 </div>
-                <h6 class="card-title mt-4 text-center" style="font-size: 1.5vw;">CSS3</h6>
+                <h6 class="card-title mt-4 text-center">CSS3</h6>
               </div>
             </div>
           </div>
-          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+          <div class="col-4 col-md-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -105,11 +105,11 @@
                     <img src="img/skills/javascript-icon.png" alt="logo" class="img-fluid">
                   </div>
                 </div>
-                <h6 class="card-title mt-4 text-center" style="font-size: 1.5vw;">JavaScript</h6>
+                <h6 class="card-title mt-4 text-center">JavaScript</h6>
               </div>
             </div>
           </div>
-          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+          <div class="col-4 col-md-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -117,11 +117,11 @@
                     <img src="img/skills/typescript-icon.png" alt="logo" class="img-fluid">
                   </div>
                 </div>
-                <h6 class="card-title mt-4 text-center" style="font-size: 1.4vw;">TypeScript</h6>
+                <h6 class="card-title mt-4 text-center">TypeScript</h6>
               </div>
             </div>
           </div>
-          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+          <div class="col-4 col-md-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -129,11 +129,11 @@
                     <img src="img/skills/php-icon.png" alt="logo" class="img-fluid">
                   </div>
                 </div>
-                <h6 class="card-title mt-4 text-center" style="font-size: 1.4vw;">PHP</h6>
+                <h6 class="card-title mt-4 text-center">PHP</h6>
               </div>
             </div>
           </div>
-          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+          <div class="col-4 col-md-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -141,11 +141,11 @@
                     <img src="img/skills/bootstrap-icon.png" alt="logo" class="img-fluid">
                   </div>
                 </div>
-                <h6 class="card-title mt-4 text-center" style="font-size: 1.4vw;">Bootstrap</h6>
+                <h6 class="card-title mt-4 text-center">Bootstrap</h6>
               </div>
             </div>
           </div>
-          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+          <div class="col-4 col-md-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -153,11 +153,11 @@
                     <img src="img/skills/tailwind-icon.png" alt="logo" class="img-fluid">
                   </div>
                 </div>
-                <h6 class="card-title mt-4 text-center" style="font-size: 1.4vw;">TailwindCSS</h6>
+                <h6 class="card-title mt-4 text-center">TailwindCSS</h6>
               </div>
             </div>
           </div>
-          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+          <div class="col-4 col-md-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -165,11 +165,11 @@
                     <img src="img/skills/laravel-icon.png" alt="logo" class="img-fluid">
                   </div>
                 </div>
-                <h6 class="card-title mt-4 text-center" style="font-size: 1.4vw;">Laravel</h6>
+                <h6 class="card-title mt-4 text-center">Laravel</h6>
               </div>
             </div>
           </div>
-          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+          <div class="col-4 col-md-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -177,11 +177,11 @@
                     <img src="img/skills/nodejs-icon.png" alt="logo" class="img-fluid">
                   </div>
                 </div>
-                <h6 class="card-title mt-4 text-center" style="font-size: 1.4vw;">Node.js</h6>
+                <h6 class="card-title mt-4 text-center">Node.js</h6>
               </div>
             </div>
           </div>
-          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+          <div class="col-4 col-md-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -189,11 +189,11 @@
                     <img src="img/skills/express-logo.png" alt="logo" class="img-fluid">
                   </div>
                 </div>
-                <h6 class="card-title mt-4 text-center" style="font-size: 1.4vw;">Express.js</h6>
+                <h6 class="card-title mt-4 text-center">Express.js</h6>
               </div>
             </div>
           </div>
-          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+          <div class="col-4 col-md-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -201,11 +201,11 @@
                     <img src="img/skills/reactjs-icon.png" alt="logo" class="img-fluid">
                   </div>
                 </div>
-                <h6 class="card-title mt-4 text-center" style="font-size: 1.4vw;">React.js</h6>
+                <h6 class="card-title mt-4 text-center">React.js</h6>
               </div>
             </div>
           </div>
-          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+          <div class="col-4 col-md-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -213,11 +213,11 @@
                     <img src="img/skills/nextjs.png" alt="logo" class="img-fluid">
                   </div>
                 </div>
-                <h6 class="card-title mt-4 text-center" style="font-size: 1.4vw;">Next.js</h6>
+                <h6 class="card-title mt-4 text-center">Next.js</h6>
               </div>
             </div>
           </div>
-          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+          <div class="col-4 col-md-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -225,11 +225,11 @@
                     <img src="img/skills/mysql-logo.png" alt="logo" class="img-fluid">
                   </div>
                 </div>
-                <h6 class="card-title mt-4 text-center" style="font-size: 1.4vw;">MySQL</h6>
+                <h6 class="card-title mt-4 text-center">MySQL</h6>
               </div>
             </div>
           </div>
-          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+          <div class="col-4 col-md-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -237,12 +237,12 @@
                     <img src="img/skills/mongodb.png" alt="logo" class="img-fluid">
                   </div>
                 </div>
-                <h6 class="card-title mt-4 text-center" style="font-size: 1.4vw;">MongoDB</h6>
+                <h6 class="card-title mt-4 text-center">MongoDB</h6>
               </div>
             </div>
           </div>
           
-          <!-- <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+          <!-- <div class="col-4 col-md-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
                 <img src="img/skills/css3-icon.png" alt="logo" class="img-fluid">
